welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:21: error: reassignment to val
	if (isFacingTrail=true) {
                         ^SlugHunting:20: error: type mismatch;
 found   : Unit
 required: Boolean
	while (!estSurBiscuit) {avance() 
        ^